--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,10 @@
 
 /teacher/build/
 /teacher/step_1/build/
+/teacher/step_1/out/
+
+/teacher/step_2/build/
 /teacher/step_2/out/
+
+/teacher/step_3/build/
+/teacher/step_3/out/
