--- a/settings.gradle
+++ b/settings.gradle
@@ -10,3 +10,4 @@ include 'teacher:step_9'
 include 'teacher:step_10'
 include 'teacher:step_11'
 include 'teacher:step_12'
+include 'teacher:step_13'
