--- a/teacher/step_10/build.gradle
+++ b/teacher/step_10/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 	testCompileOnly 'org.projectlombok:lombok:1.18.24'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 
-	testImplementation('junit:junit:4.13.1')
-	testImplementation('org.mockito:mockito-core:3.6.0')
-	testImplementation('org.springframework:spring-test:5.3.23')
+	testImplementation('org.springframework.boot:spring-boot-starter-test:2.7.5') {
+		exclude (group: 'ch.qos.logback', module: 'logback-classic')
+	}
 }
