--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,9 @@
 
 /teacher/step_14/build/
 /teacher/step_14/out/
+
+/teacher/step_15/build/
+/teacher/step_15/out/
+
+/teacher/step_16/build/
+/teacher/step_16/out/
