--- a/settings.gradle
+++ b/settings.gradle
@@ -12,3 +12,5 @@ include 'teacher:step_11'
 include 'teacher:step_12'
 include 'teacher:step_13'
 include 'teacher:step_14'
+include 'teacher:step_15'
+include 'teacher:step_16'
