--- a/settings.gradle
+++ b/settings.gradle
@@ -14,3 +14,4 @@ include 'teacher:step_13'
 include 'teacher:step_14'
 include 'teacher:step_15'
 include 'teacher:step_16'
+include 'teacher:step_17'
