--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ include 'teacher:step_14'
 include 'teacher:step_15'
 include 'teacher:step_16'
 include 'teacher:step_17'
+include 'teacher:step_18'
