--- a/settings.gradle
+++ b/settings.gradle
@@ -16,3 +16,4 @@ include 'teacher:step_15'
 include 'teacher:step_16'
 include 'teacher:step_17'
 include 'teacher:step_18'
+include 'teacher:step_19'
