--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,4 @@ include 'teacher:step_16'
 include 'teacher:step_17'
 include 'teacher:step_18'
 include 'teacher:step_19'
+include 'teacher:step_20'
