--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,4 @@ include 'teacher:step_17'
 include 'teacher:step_18'
 include 'teacher:step_19'
 include 'teacher:step_20'
+include 'teacher:step_21'
