--- a/settings.gradle
+++ b/settings.gradle
@@ -19,3 +19,4 @@ include 'teacher:step_18'
 include 'teacher:step_19'
 include 'teacher:step_20'
 include 'teacher:step_21'
+include 'teacher:step_22'
