--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include 'teacher:step_19'
 include 'teacher:step_20'
 include 'teacher:step_21'
 include 'teacher:step_22'
+include 'teacher:step_23'
