--- a/settings.gradle
+++ b/settings.gradle
@@ -21,3 +21,4 @@ include 'teacher:step_20'
 include 'teacher:step_21'
 include 'teacher:step_22'
 include 'teacher:step_23'
+include 'teacher:step_24'
