--- a/settings.gradle
+++ b/settings.gradle
@@ -22,3 +22,4 @@ include 'teacher:step_21'
 include 'teacher:step_22'
 include 'teacher:step_23'
 include 'teacher:step_24'
+include 'teacher:step_25'
