--- a/settings.gradle
+++ b/settings.gradle
@@ -23,3 +23,4 @@ include 'teacher:step_22'
 include 'teacher:step_23'
 include 'teacher:step_24'
 include 'teacher:step_25'
+include 'teacher:step_26'
