--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,4 @@ include 'teacher:step_23'
 include 'teacher:step_24'
 include 'teacher:step_25'
 include 'teacher:step_26'
+include 'teacher:step_27'
