--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,4 @@ include 'teacher:step_24'
 include 'teacher:step_25'
 include 'teacher:step_26'
 include 'teacher:step_27'
+include 'teacher:step_28'
