--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,8 @@
 
 /teacher/step_27/build/
 /teacher/step_27/out/
+/teacher/step_27/logs/
 
 /teacher/step_28/build/
 /teacher/step_28/out/
+/teacher/step_28/logs/
