--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,7 @@
 /teacher/step_28/build/
 /teacher/step_28/out/
 /teacher/step_28/logs/
+
+/teacher/step_29/build/
+/teacher/step_29/out/
+/teacher/step_29/logs/
