--- a/settings.gradle
+++ b/settings.gradle
@@ -26,3 +26,4 @@ include 'teacher:step_25'
 include 'teacher:step_26'
 include 'teacher:step_27'
 include 'teacher:step_28'
+include 'teacher:step_29'
