--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,7 @@
 /teacher/step_29/build/
 /teacher/step_29/out/
 /teacher/step_29/logs/
+
+/teacher/step_30/build/
+/teacher/step_30/out/
+/teacher/step_30/logs/
