--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include 'teacher:step_26'
 include 'teacher:step_27'
 include 'teacher:step_28'
 include 'teacher:step_29'
+include 'teacher:step_30'
