--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,7 @@
 /teacher/step_30/build/
 /teacher/step_30/out/
 /teacher/step_30/logs/
+
+/teacher/step_31/build/
+/teacher/step_31/out/
+/teacher/step_31/logs/
