--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include 'teacher:step_27'
 include 'teacher:step_28'
 include 'teacher:step_29'
 include 'teacher:step_30'
+include 'teacher:step_31'
