--- a/.gitignore
+++ b/.gitignore
@@ -122,3 +122,7 @@
 /teacher/step_31/build/
 /teacher/step_31/out/
 /teacher/step_31/logs/
+
+/teacher/step_32/build/
+/teacher/step_32/out/
+/teacher/step_32/logs/
