--- a/settings.gradle
+++ b/settings.gradle
@@ -29,3 +29,4 @@ include 'teacher:step_28'
 include 'teacher:step_29'
 include 'teacher:step_30'
 include 'teacher:step_31'
+include 'teacher:step_32'
