--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,7 @@
 /teacher/step_32/build/
 /teacher/step_32/out/
 /teacher/step_32/logs/
+
+/teacher/step_33/build/
+/teacher/step_33/out/
+/teacher/step_33/logs/
