--- a/settings.gradle
+++ b/settings.gradle
@@ -30,3 +30,4 @@ include 'teacher:step_29'
 include 'teacher:step_30'
 include 'teacher:step_31'
 include 'teacher:step_32'
+include 'teacher:step_33'
