--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,7 @@
 /teacher/step_33/build/
 /teacher/step_33/out/
 /teacher/step_33/logs/
+
+/teacher/step_34/build/
+/teacher/step_34/out/
+/teacher/step_34/logs/
