--- a/settings.gradle
+++ b/settings.gradle
@@ -31,3 +31,4 @@ include 'teacher:step_30'
 include 'teacher:step_31'
 include 'teacher:step_32'
 include 'teacher:step_33'
+include 'teacher:step_34'
