--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,7 @@
 /teacher/step_34/build/
 /teacher/step_34/out/
 /teacher/step_34/logs/
+
+/teacher/step_35/build/
+/teacher/step_35/out/
+/teacher/step_35/logs/
