--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,7 @@
 /teacher/step_35/build/
 /teacher/step_35/out/
 /teacher/step_35/logs/
+
+/teacher/step_36/build/
+/teacher/step_36/out/
+/teacher/step_36/logs/
