--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,4 @@ include 'teacher:step_32'
 include 'teacher:step_33'
 include 'teacher:step_34'
 include 'teacher:step_35'
+include 'teacher:step_36'
