--- a/.gitignore
+++ b/.gitignore
@@ -142,3 +142,7 @@
 /teacher/step_36/build/
 /teacher/step_36/out/
 /teacher/step_36/logs/
+
+/teacher/step_37/build/
+/teacher/step_37/out/
+/teacher/step_37/logs/
