--- a/settings.gradle
+++ b/settings.gradle
@@ -34,3 +34,4 @@ include 'teacher:step_33'
 include 'teacher:step_34'
 include 'teacher:step_35'
 include 'teacher:step_36'
+include 'teacher:step_37'
