--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,7 @@
 /teacher/step_37/build/
 /teacher/step_37/out/
 /teacher/step_37/logs/
+
+/teacher/step_38/build/
+/teacher/step_38/out/
+/teacher/step_38/logs/
