--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,4 @@ include 'teacher:step_34'
 include 'teacher:step_35'
 include 'teacher:step_36'
 include 'teacher:step_37'
+include 'teacher:step_38'
