--- a/.gitignore
+++ b/.gitignore
@@ -150,3 +150,7 @@
 /teacher/step_38/build/
 /teacher/step_38/out/
 /teacher/step_38/logs/
+
+/teacher/step_39/build/
+/teacher/step_39/out/
+/teacher/step_39/logs/
