--- a/settings.gradle
+++ b/settings.gradle
@@ -36,3 +36,4 @@ include 'teacher:step_35'
 include 'teacher:step_36'
 include 'teacher:step_37'
 include 'teacher:step_38'
+include 'teacher:step_39'
