--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,7 @@
 /teacher/step_39/build/
 /teacher/step_39/out/
 /teacher/step_39/logs/
+
+/teacher/step_40/build/
+/teacher/step_40/out/
+/teacher/step_40/logs/
