--- a/settings.gradle
+++ b/settings.gradle
@@ -37,3 +37,4 @@ include 'teacher:step_36'
 include 'teacher:step_37'
 include 'teacher:step_38'
 include 'teacher:step_39'
+include 'teacher:step_40'
