--- a/settings.gradle
+++ b/settings.gradle
@@ -38,3 +38,4 @@ include 'teacher:step_37'
 include 'teacher:step_38'
 include 'teacher:step_39'
 include 'teacher:step_40'
+include 'teacher:step_41'
