--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,7 @@
 /teacher/step_40/build/
 /teacher/step_40/out/
 /teacher/step_40/logs/
+
+/teacher/step_41/build/
+/teacher/step_41/out/
+/teacher/step_41/logs/
