--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,7 @@
 /teacher/step_41/build/
 /teacher/step_41/out/
 /teacher/step_41/logs/
+
+/teacher/step_42/build/
+/teacher/step_42/out/
+/teacher/step_42/logs/
