--- a/settings.gradle
+++ b/settings.gradle
@@ -39,3 +39,4 @@ include 'teacher:step_38'
 include 'teacher:step_39'
 include 'teacher:step_40'
 include 'teacher:step_41'
+include 'teacher:step_42'
