--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,7 @@
 /teacher/step_42/build/
 /teacher/step_42/out/
 /teacher/step_42/logs/
+
+/teacher/step_43/build/
+/teacher/step_43/out/
+/teacher/step_43/logs/
