--- a/settings.gradle
+++ b/settings.gradle
@@ -40,3 +40,4 @@ include 'teacher:step_39'
 include 'teacher:step_40'
 include 'teacher:step_41'
 include 'teacher:step_42'
+include 'teacher:step_43'
