--- a/.gitignore
+++ b/.gitignore
@@ -170,3 +170,7 @@
 /teacher/step_43/build/
 /teacher/step_43/out/
 /teacher/step_43/logs/
+
+/teacher/step_44/build/
+/teacher/step_44/out/
+/teacher/step_44/logs/
