--- a/settings.gradle
+++ b/settings.gradle
@@ -41,3 +41,4 @@ include 'teacher:step_40'
 include 'teacher:step_41'
 include 'teacher:step_42'
 include 'teacher:step_43'
+include 'teacher:step_44'
