--- a/teacher/step_44/src/main/resources/application.properties
+++ b/teacher/step_44/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/java-real-practice-insurance
 spring.datasource.username=root
 spring.datasource.password=javaguru
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
