--- a/teacher/step_44/src/test/resources/application.properties
+++ b/teacher/step_44/src/test/resources/application.properties
@@ -3,8 +3,9 @@ spring.jpa.show-sql=true
 
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+spring.datasource.driverClassName=org.h2.Driver
