--- a/teacher/step_22/build.gradle
+++ b/teacher/step_22/build.gradle
@@ -6,11 +6,11 @@ dependencies {
 
 	implementation('com.fasterxml.jackson.core:jackson-core:2.14.2')
 
-	compileOnly 'org.projectlombok:lombok:1.18.24'
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+	compileOnly('org.projectlombok:lombok:1.18.24')
+	annotationProcessor('org.projectlombok:lombok:1.18.24')
 
-	testCompileOnly 'org.projectlombok:lombok:1.18.24'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+	testCompileOnly('org.projectlombok:lombok:1.18.24')
+	testAnnotationProcessor('org.projectlombok:lombok:1.18.24')
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test:2.7.5') {
 		exclude (group: 'ch.qos.logback', module: 'logback-classic')
