--- a/teacher/step_24/build.gradle
+++ b/teacher/step_24/build.gradle
@@ -4,11 +4,11 @@ dependencies {
 
 	implementation('com.fasterxml.jackson.core:jackson-core:2.14.2')
 
-	compileOnly 'org.projectlombok:lombok:1.18.24'
-	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+	compileOnly('org.projectlombok:lombok:1.18.24')
+	annotationProcessor('org.projectlombok:lombok:1.18.24')
 
-	testCompileOnly 'org.projectlombok:lombok:1.18.24'
-	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+	testCompileOnly('org.projectlombok:lombok:1.18.24')
+	testAnnotationProcessor('org.projectlombok:lombok:1.18.24')
 
 	testImplementation('org.springframework.boot:spring-boot-starter-test:2.7.5')
 
