--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,7 @@
 /teacher/step_44/build/
 /teacher/step_44/out/
 /teacher/step_44/logs/
+
+/teacher/step_45/build/
+/teacher/step_45/out/
+/teacher/step_45/logs/
