--- a/settings.gradle
+++ b/settings.gradle
@@ -42,3 +42,4 @@ include 'teacher:step_41'
 include 'teacher:step_42'
 include 'teacher:step_43'
 include 'teacher:step_44'
+include 'teacher:step_45'
