--- a/.gitignore
+++ b/.gitignore
@@ -178,3 +178,7 @@
 /teacher/step_45/build/
 /teacher/step_45/out/
 /teacher/step_45/logs/
+
+/teacher/step_46/build/
+/teacher/step_46/out/
+/teacher/step_46/logs/
