--- a/settings.gradle
+++ b/settings.gradle
@@ -43,3 +43,4 @@ include 'teacher:step_42'
 include 'teacher:step_43'
 include 'teacher:step_44'
 include 'teacher:step_45'
+include 'teacher:step_46'
