--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,7 @@
 /teacher/step_46/build/
 /teacher/step_46/out/
 /teacher/step_46/logs/
+
+/teacher/step_47/build/
+/teacher/step_47/out/
+/teacher/step_47/logs/
