--- a/settings.gradle
+++ b/settings.gradle
@@ -44,3 +44,4 @@ include 'teacher:step_43'
 include 'teacher:step_44'
 include 'teacher:step_45'
 include 'teacher:step_46'
+include 'teacher:step_47'
