--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,7 @@
 /teacher/step_47/build/
 /teacher/step_47/out/
 /teacher/step_47/logs/
+
+/teacher/step_48/build/
+/teacher/step_48/out/
+/teacher/step_48/logs/
