--- a/settings.gradle
+++ b/settings.gradle
@@ -45,3 +45,4 @@ include 'teacher:step_44'
 include 'teacher:step_45'
 include 'teacher:step_46'
 include 'teacher:step_47'
+include 'teacher:step_48'
