--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,7 @@
 /teacher/step_48/build/
 /teacher/step_48/out/
 /teacher/step_48/logs/
+
+/teacher/step_49/build/
+/teacher/step_49/out/
+/teacher/step_49/logs/
