--- a/settings.gradle
+++ b/settings.gradle
@@ -46,3 +46,4 @@ include 'teacher:step_45'
 include 'teacher:step_46'
 include 'teacher:step_47'
 include 'teacher:step_48'
+include 'teacher:step_49'
