--- a/.gitignore
+++ b/.gitignore
@@ -194,3 +194,7 @@
 /teacher/step_49/build/
 /teacher/step_49/out/
 /teacher/step_49/logs/
+
+/teacher/step_50/build/
+/teacher/step_50/out/
+/teacher/step_50/logs/
