--- a/settings.gradle
+++ b/settings.gradle
@@ -47,3 +47,4 @@ include 'teacher:step_46'
 include 'teacher:step_47'
 include 'teacher:step_48'
 include 'teacher:step_49'
+include 'teacher:step_50'
