--- a/.gitignore
+++ b/.gitignore
@@ -198,3 +198,7 @@
 /teacher/step_50/build/
 /teacher/step_50/out/
 /teacher/step_50/logs/
+
+/teacher/step_51/build/
+/teacher/step_51/out/
+/teacher/step_51/logs/
