--- a/settings.gradle
+++ b/settings.gradle
@@ -48,3 +48,4 @@ include 'teacher:step_47'
 include 'teacher:step_48'
 include 'teacher:step_49'
 include 'teacher:step_50'
+include 'teacher:step_51'
