--- a/.gitignore
+++ b/.gitignore
@@ -202,3 +202,7 @@
 /teacher/step_51/build/
 /teacher/step_51/out/
 /teacher/step_51/logs/
+
+/teacher/step_52/build/
+/teacher/step_52/out/
+/teacher/step_52/logs/
