--- a/settings.gradle
+++ b/settings.gradle
@@ -49,3 +49,4 @@ include 'teacher:step_48'
 include 'teacher:step_49'
 include 'teacher:step_50'
 include 'teacher:step_51'
+include 'teacher:step_52'
