--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,7 @@
 /teacher/step_52/build/
 /teacher/step_52/out/
 /teacher/step_52/logs/
+
+/teacher/step_53/build/
+/teacher/step_53/out/
+/teacher/step_53/logs/
