--- a/settings.gradle
+++ b/settings.gradle
@@ -50,3 +50,4 @@ include 'teacher:step_49'
 include 'teacher:step_50'
 include 'teacher:step_51'
 include 'teacher:step_52'
+include 'teacher:step_53'
