--- a/.gitignore
+++ b/.gitignore
@@ -210,3 +210,7 @@
 /teacher/step_53/build/
 /teacher/step_53/out/
 /teacher/step_53/logs/
+
+/teacher/step_54/build/
+/teacher/step_54/out/
+/teacher/step_54/logs/
