--- a/settings.gradle
+++ b/settings.gradle
@@ -51,3 +51,4 @@ include 'teacher:step_50'
 include 'teacher:step_51'
 include 'teacher:step_52'
 include 'teacher:step_53'
+include 'teacher:step_54'
