--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,7 @@
 /teacher/step_54/build/
 /teacher/step_54/out/
 /teacher/step_54/logs/
+
+/teacher/step_55/build/
+/teacher/step_55/out/
+/teacher/step_55/logs/
