--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,7 @@
 /teacher/step_55/build/
 /teacher/step_55/out/
 /teacher/step_55/logs/
+
+/teacher/step_56/build/
+/teacher/step_56/out/
+/teacher/step_56/logs/
