--- a/settings.gradle
+++ b/settings.gradle
@@ -53,3 +53,4 @@ include 'teacher:step_52'
 include 'teacher:step_53'
 include 'teacher:step_54'
 include 'teacher:step_55'
+include 'teacher:step_56'
