--- a/teacher/step_75/src/main/resources/errorCodes.properties
+++ b/teacher/step_75/src/main/resources/errorCodes.properties
@@ -11,3 +11,4 @@ ERROR_CODE_10=Field country must not be empty!
 ERROR_CODE_11=Field personBirthDate must not be empty!
 ERROR_CODE_12=Field personBirthDate must be in the past!
 ERROR_CODE_13=Field medicalRiskLimitLevel must not be empty!
+ERROR_CODE_14=MedicalRiskLimitLevel value not supported!
