--- a/teacher/step_75/src/main/resources/errorCodes.properties
+++ b/teacher/step_75/src/main/resources/errorCodes.properties
@@ -12,3 +12,4 @@ ERROR_CODE_11=Field personBirthDate must not be empty!
 ERROR_CODE_12=Field personBirthDate must be in the past!
 ERROR_CODE_13=Field medicalRiskLimitLevel must not be empty!
 ERROR_CODE_14=MedicalRiskLimitLevel value not supported!
+ERROR_CODE_15=Country value not supported!
