--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include 'apple_warehouse:step_1'
 include 'apple_warehouse:step_2'
+include 'apple_warehouse:step_3'
 
 
 include 'private_property_insurance_calculator:step_1'
