--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'apple_warehouse:step_2'
 include 'apple_warehouse:step_3'
 include 'apple_warehouse:step_4'
 include 'apple_warehouse:step_5'
+include 'apple_warehouse:step_6'
 
 
 include 'private_property_insurance_calculator:step_1'
