--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@ include 'apple_warehouse:step_6'
 include 'apple_warehouse:step_7'
 include 'apple_warehouse:step_8'
 include 'apple_warehouse:step_9'
+include 'apple_warehouse:step_10'
 
 
 include 'private_property_insurance_calculator:step_1'
