--- a/settings.gradle
+++ b/settings.gradle
@@ -10,6 +10,7 @@ include 'apple_warehouse:step_9'
 include 'apple_warehouse:step_10'
 include 'apple_warehouse:step_11'
 include 'apple_warehouse:step_12'
+include 'apple_warehouse:step_13'
 
 
 include 'private_property_insurance_calculator:step_1'
