--- a/settings.gradle
+++ b/settings.gradle
@@ -13,6 +13,9 @@ include 'apple_warehouse:step_12'
 include 'apple_warehouse:step_13'
 
 
+include 'traders_and_transactions:step_1'
+
+
 include 'private_property_insurance_calculator:step_1'
 include 'private_property_insurance_calculator:step_2'
 include 'private_property_insurance_calculator:step_3'
