--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ include 'apple_warehouse:step_13'
 
 
 include 'traders_and_transactions:step_1'
+include 'traders_and_transactions:step_2'
 
 
 include 'private_property_insurance_calculator:step_1'
