--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ include 'traders_and_transactions:step_3'
 include 'traders_and_transactions:step_4'
 include 'traders_and_transactions:step_5'
 include 'traders_and_transactions:step_6'
+include 'traders_and_transactions:step_7'
 
 
 include 'private_property_insurance_calculator:step_1'
