--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include 'traders_and_transactions:step_5'
 include 'traders_and_transactions:step_6'
 include 'traders_and_transactions:step_7'
 include 'traders_and_transactions:step_8'
+include 'traders_and_transactions:step_9'
 
 
 include 'private_property_insurance_calculator:step_1'
