--- a/settings.gradle
+++ b/settings.gradle
@@ -23,6 +23,7 @@ include 'traders_and_transactions:step_7'
 include 'traders_and_transactions:step_8'
 include 'traders_and_transactions:step_9'
 include 'traders_and_transactions:step_10'
+include 'traders_and_transactions:step_11'
 
 
 include 'private_property_insurance_calculator:step_1'
