--- a/settings.gradle
+++ b/settings.gradle
@@ -21,6 +21,7 @@ include 'bank_transactions:step_5'
 include 'bank_transactions:step_6'
 include 'bank_transactions:step_7'
 include 'bank_transactions:step_8'
+include 'bank_transactions:step_9'
 
 
 include 'traders_and_transactions:step_1'
