--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,7 @@ include 'bank_transactions:step_9'
 include 'bank_transactions:step_10'
 include 'bank_transactions:step_11'
 include 'bank_transactions:step_12'
+include 'bank_transactions:step_13'
 
 
 include 'traders_and_transactions:step_1'
