--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,7 @@ include 'bank_transactions:step_11'
 include 'bank_transactions:step_12'
 include 'bank_transactions:step_13'
 include 'bank_transactions:step_14'
+include 'bank_transactions:step_15'
 
 
 include 'traders_and_transactions:step_1'
