--- a/settings.gradle
+++ b/settings.gradle
@@ -29,6 +29,7 @@ include 'bank_transactions:step_13'
 include 'bank_transactions:step_14'
 include 'bank_transactions:step_15'
 include 'bank_transactions:step_16'
+include 'bank_transactions:step_17'
 
 
 include 'traders_and_transactions:step_1'
