--- a/settings.gradle
+++ b/settings.gradle
@@ -30,6 +30,7 @@ include 'bank_transactions:step_14'
 include 'bank_transactions:step_15'
 include 'bank_transactions:step_16'
 include 'bank_transactions:step_17'
+include 'bank_transactions:step_18'
 
 
 include 'traders_and_transactions:step_1'
