--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ subprojects {
 		options.encoding = "UTF-8"
 	}
 
+	compileTestJava {
+		options.encoding = "UTF-8"
+	}
+
 	test {
 		useJUnitPlatform()
 	}
