bank transactions step 19

--- a/settings.gradle
+++ b/settings.gradle
@@ -31,6 +31,7 @@ include 'bank_transactions:step_15'
 include 'bank_transactions:step_16'
 include 'bank_transactions:step_17'
 include 'bank_transactions:step_18'
+include 'bank_transactions:step_19'
 
 
 include 'traders_and_transactions:step_1'
