--- a/settings.gradle
+++ b/settings.gradle
@@ -32,6 +32,7 @@ include 'bank_transactions:step_16'
 include 'bank_transactions:step_17'
 include 'bank_transactions:step_18'
 include 'bank_transactions:step_19'
+include 'bank_transactions:step_20'
 
 
 include 'traders_and_transactions:step_1'
