--- a/settings.gradle
+++ b/settings.gradle
@@ -34,6 +34,7 @@ include 'bank_transactions:step_18'
 include 'bank_transactions:step_19'
 include 'bank_transactions:step_20'
 include 'bank_transactions:step_21'
+include 'bank_transactions:step_22'
 
 
 include 'traders_and_transactions:step_1'
