bank transactions step 23

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,6 +35,7 @@ include 'bank_transactions:step_19'
 include 'bank_transactions:step_20'
 include 'bank_transactions:step_21'
 include 'bank_transactions:step_22'
+include 'bank_transactions:step_23'
 
 
 include 'traders_and_transactions:step_1'
