--- a/settings.gradle
+++ b/settings.gradle
@@ -37,6 +37,7 @@ include 'bank_transactions:step_21'
 include 'bank_transactions:step_22'
 include 'bank_transactions:step_23'
 include 'bank_transactions:step_24'
+include 'bank_transactions:step_25'
 
 
 include 'traders_and_transactions:step_1'
