--- a/settings.gradle
+++ b/settings.gradle
@@ -40,6 +40,7 @@ include 'bank_transactions:step_24'
 include 'bank_transactions:step_25'
 include 'bank_transactions:step_26'
 include 'bank_transactions:step_27'
+include 'bank_transactions:step_28'
 
 
 include 'traders_and_transactions:step_1'
