--- a/settings.gradle
+++ b/settings.gradle
@@ -41,6 +41,7 @@ include 'bank_transactions:step_25'
 include 'bank_transactions:step_26'
 include 'bank_transactions:step_27'
 include 'bank_transactions:step_28'
+include 'bank_transactions:step_29'
 
 
 include 'traders_and_transactions:step_1'
