bank transactions step 31

--- a/settings.gradle
+++ b/settings.gradle
@@ -43,6 +43,7 @@ include 'bank_transactions:step_27'
 include 'bank_transactions:step_28'
 include 'bank_transactions:step_29'
 include 'bank_transactions:step_30'
+include 'bank_transactions:step_31'
 
 
 include 'traders_and_transactions:step_1'
