--- a/settings.gradle
+++ b/settings.gradle
@@ -44,6 +44,7 @@ include 'bank_transactions:step_28'
 include 'bank_transactions:step_29'
 include 'bank_transactions:step_30'
 include 'bank_transactions:step_31'
+include 'bank_transactions:step_32'
 
 
 include 'traders_and_transactions:step_1'
