--- a/settings.gradle
+++ b/settings.gradle
@@ -45,6 +45,7 @@ include 'bank_transactions:step_29'
 include 'bank_transactions:step_30'
 include 'bank_transactions:step_31'
 include 'bank_transactions:step_32'
+include 'bank_transactions:step_33'
 
 
 include 'traders_and_transactions:step_1'
