bank transactions step 34

--- a/settings.gradle
+++ b/settings.gradle
@@ -46,6 +46,7 @@ include 'bank_transactions:step_30'
 include 'bank_transactions:step_31'
 include 'bank_transactions:step_32'
 include 'bank_transactions:step_33'
+include 'bank_transactions:step_34'
 
 
 include 'traders_and_transactions:step_1'
