--- a/settings.gradle
+++ b/settings.gradle
@@ -48,6 +48,7 @@ include 'bank_transactions:step_32'
 include 'bank_transactions:step_33'
 include 'bank_transactions:step_34'
 include 'bank_transactions:step_35'
+include 'bank_transactions:step_36'
 
 
 include 'traders_and_transactions:step_1'
