--- a/settings.gradle
+++ b/settings.gradle
@@ -51,6 +51,7 @@ include 'bank_transactions:step_35'
 include 'bank_transactions:step_36'
 include 'bank_transactions:step_37'
 include 'bank_transactions:step_38'
+include 'bank_transactions:step_39'
 
 
 include 'traders_and_transactions:step_1'
