--- a/settings.gradle
+++ b/settings.gradle
@@ -54,6 +54,7 @@ include 'bank_transactions:step_38'
 include 'bank_transactions:step_39'
 include 'bank_transactions:step_40'
 include 'bank_transactions:step_41'
+include 'bank_transactions:step_42'
 
 
 include 'traders_and_transactions:step_1'
