--- a/settings.gradle
+++ b/settings.gradle
@@ -56,6 +56,7 @@ include 'bank_transactions:step_40'
 include 'bank_transactions:step_41'
 include 'bank_transactions:step_42'
 include 'bank_transactions:step_43'
+include 'bank_transactions:step_44'
 
 
 include 'traders_and_transactions:step_1'
