bank transactions step 45

--- a/settings.gradle
+++ b/settings.gradle
@@ -57,6 +57,7 @@ include 'bank_transactions:step_41'
 include 'bank_transactions:step_42'
 include 'bank_transactions:step_43'
 include 'bank_transactions:step_44'
+include 'bank_transactions:step_45'
 
 
 include 'traders_and_transactions:step_1'
