--- a/settings.gradle
+++ b/settings.gradle
@@ -58,6 +58,7 @@ include 'bank_transactions:step_42'
 include 'bank_transactions:step_43'
 include 'bank_transactions:step_44'
 include 'bank_transactions:step_45'
+include 'bank_transactions:step_46'
 
 
 include 'traders_and_transactions:step_1'
