--- a/settings.gradle
+++ b/settings.gradle
@@ -60,6 +60,7 @@ include 'bank_transactions:step_44'
 include 'bank_transactions:step_45'
 include 'bank_transactions:step_46'
 include 'bank_transactions:step_47'
+include 'bank_transactions:step_48'
 
 
 include 'traders_and_transactions:step_1'
