bank transactions step 50

--- a/settings.gradle
+++ b/settings.gradle
@@ -62,6 +62,7 @@ include 'bank_transactions:step_46'
 include 'bank_transactions:step_47'
 include 'bank_transactions:step_48'
 include 'bank_transactions:step_49'
+include 'bank_transactions:step_50'
 
 
 include 'traders_and_transactions:step_1'
