bank transactions step 51

--- a/settings.gradle
+++ b/settings.gradle
@@ -63,6 +63,7 @@ include 'bank_transactions:step_47'
 include 'bank_transactions:step_48'
 include 'bank_transactions:step_49'
 include 'bank_transactions:step_50'
+include 'bank_transactions:step_51'
 
 
 include 'traders_and_transactions:step_1'
