--- a/settings.gradle
+++ b/settings.gradle
@@ -64,6 +64,7 @@ include 'bank_transactions:step_48'
 include 'bank_transactions:step_49'
 include 'bank_transactions:step_50'
 include 'bank_transactions:step_51'
+include 'bank_transactions:step_52'
 
 
 include 'traders_and_transactions:step_1'
