bank transactions step 54

--- a/settings.gradle
+++ b/settings.gradle
@@ -66,6 +66,7 @@ include 'bank_transactions:step_50'
 include 'bank_transactions:step_51'
 include 'bank_transactions:step_52'
 include 'bank_transactions:step_53'
+include 'bank_transactions:step_54'
 
 
 include 'traders_and_transactions:step_1'
