--- a/settings.gradle
+++ b/settings.gradle
@@ -67,6 +67,7 @@ include 'bank_transactions:step_51'
 include 'bank_transactions:step_52'
 include 'bank_transactions:step_53'
 include 'bank_transactions:step_54'
+include 'bank_transactions:step_55'
 
 
 include 'traders_and_transactions:step_1'
