bank transactions step 56

--- a/settings.gradle
+++ b/settings.gradle
@@ -68,6 +68,7 @@ include 'bank_transactions:step_52'
 include 'bank_transactions:step_53'
 include 'bank_transactions:step_54'
 include 'bank_transactions:step_55'
+include 'bank_transactions:step_56'
 
 
 include 'traders_and_transactions:step_1'
