bank transactions step 58

--- a/settings.gradle
+++ b/settings.gradle
@@ -70,6 +70,7 @@ include 'bank_transactions:step_54'
 include 'bank_transactions:step_55'
 include 'bank_transactions:step_56'
 include 'bank_transactions:step_57'
+include 'bank_transactions:step_58'
 
 
 include 'traders_and_transactions:step_1'
