bank transactions step 59

--- a/settings.gradle
+++ b/settings.gradle
@@ -71,6 +71,7 @@ include 'bank_transactions:step_55'
 include 'bank_transactions:step_56'
 include 'bank_transactions:step_57'
 include 'bank_transactions:step_58'
+include 'bank_transactions:step_59'
 
 
 include 'traders_and_transactions:step_1'
