--- a/settings.gradle
+++ b/settings.gradle
@@ -76,6 +76,7 @@ include 'bank_transactions:step_59'
 
 include 'fraud_detector:step_1'
 include 'fraud_detector:step_2'
+include 'fraud_detector:step_3'
 
 
 include 'traders_and_transactions:step_1'
