--- a/settings.gradle
+++ b/settings.gradle
@@ -77,6 +77,7 @@ include 'bank_transactions:step_59'
 include 'fraud_detector:step_1'
 include 'fraud_detector:step_2'
 include 'fraud_detector:step_3'
+include 'fraud_detector:step_4'
 
 
 include 'traders_and_transactions:step_1'
