--- a/settings.gradle
+++ b/settings.gradle
@@ -78,6 +78,7 @@ include 'fraud_detector:step_1'
 include 'fraud_detector:step_2'
 include 'fraud_detector:step_3'
 include 'fraud_detector:step_4'
+include 'fraud_detector:step_5'
 
 
 include 'traders_and_transactions:step_1'
