--- a/settings.gradle
+++ b/settings.gradle
@@ -80,6 +80,7 @@ include 'fraud_detector:step_3'
 include 'fraud_detector:step_4'
 include 'fraud_detector:step_5'
 include 'fraud_detector:step_6'
+include 'fraud_detector:step_7'
 
 
 include 'traders_and_transactions:step_1'
