--- a/settings.gradle
+++ b/settings.gradle
@@ -81,6 +81,7 @@ include 'fraud_detector:step_4'
 include 'fraud_detector:step_5'
 include 'fraud_detector:step_6'
 include 'fraud_detector:step_7'
+include 'fraud_detector:step_8'
 
 
 include 'traders_and_transactions:step_1'
