fraud detector step 10

--- a/settings.gradle
+++ b/settings.gradle
@@ -83,6 +83,7 @@ include 'fraud_detector:step_6'
 include 'fraud_detector:step_7'
 include 'fraud_detector:step_8'
 include 'fraud_detector:step_9'
+include 'fraud_detector:step_10'
 
 
 include 'traders_and_transactions:step_1'
