--- a/settings.gradle
+++ b/settings.gradle
@@ -84,6 +84,7 @@ include 'fraud_detector:step_7'
 include 'fraud_detector:step_8'
 include 'fraud_detector:step_9'
 include 'fraud_detector:step_10'
+include 'fraud_detector:step_11'
 
 
 include 'traders_and_transactions:step_1'
