--- a/settings.gradle
+++ b/settings.gradle
@@ -85,6 +85,7 @@ include 'fraud_detector:step_8'
 include 'fraud_detector:step_9'
 include 'fraud_detector:step_10'
 include 'fraud_detector:step_11'
+include 'fraud_detector:step_12'
 
 
 include 'traders_and_transactions:step_1'
