--- a/settings.gradle
+++ b/settings.gradle
@@ -88,6 +88,7 @@ include 'fraud_detector:step_11'
 include 'fraud_detector:step_12'
 include 'fraud_detector:step_13'
 include 'fraud_detector:step_14'
+include 'fraud_detector:step_15'
 
 
 include 'traders_and_transactions:step_1'
