fraud detector step 16

--- a/settings.gradle
+++ b/settings.gradle
@@ -89,6 +89,7 @@ include 'fraud_detector:step_12'
 include 'fraud_detector:step_13'
 include 'fraud_detector:step_14'
 include 'fraud_detector:step_15'
+include 'fraud_detector:step_16'
 
 
 include 'traders_and_transactions:step_1'
