--- a/settings.gradle
+++ b/settings.gradle
@@ -92,6 +92,9 @@ include 'fraud_detector:step_15'
 include 'fraud_detector:step_16'
 
 
+include 'geometry_shape:step_1'
+
+
 include 'traders_and_transactions:step_1'
 include 'traders_and_transactions:step_2'
 include 'traders_and_transactions:step_3'
