--- a/settings.gradle
+++ b/settings.gradle
@@ -93,6 +93,7 @@ include 'fraud_detector:step_16'
 
 
 include 'geometry_shape:step_1'
+include 'geometry_shape:step_2'
 
 
 include 'traders_and_transactions:step_1'
