--- a/settings.gradle
+++ b/settings.gradle
@@ -96,6 +96,7 @@ include 'geometry_shape:step_1'
 include 'geometry_shape:step_2'
 include 'geometry_shape:step_3'
 include 'geometry_shape:step_4'
+include 'geometry_shape:step_5'
 
 
 include 'traders_and_transactions:step_1'
