--- a/settings.gradle
+++ b/settings.gradle
@@ -98,6 +98,7 @@ include 'geometry_shape:step_3'
 include 'geometry_shape:step_4'
 include 'geometry_shape:step_5'
 include 'geometry_shape:step_6'
+include 'geometry_shape:step_7'
 
 
 include 'traders_and_transactions:step_1'
