--- a/settings.gradle
+++ b/settings.gradle
@@ -99,6 +99,7 @@ include 'geometry_shape:step_4'
 include 'geometry_shape:step_5'
 include 'geometry_shape:step_6'
 include 'geometry_shape:step_7'
+include 'geometry_shape:step_8'
 
 
 include 'traders_and_transactions:step_1'
