--- a/settings.gradle
+++ b/settings.gradle
@@ -100,6 +100,7 @@ include 'geometry_shape:step_5'
 include 'geometry_shape:step_6'
 include 'geometry_shape:step_7'
 include 'geometry_shape:step_8'
+include 'geometry_shape:step_9'
 
 
 include 'traders_and_transactions:step_1'
