--- a/settings.gradle
+++ b/settings.gradle
@@ -102,6 +102,7 @@ include 'geometry_shape:step_7'
 include 'geometry_shape:step_8'
 include 'geometry_shape:step_9'
 include 'geometry_shape:step_10'
+include 'geometry_shape:step_11'
 
 
 include 'traders_and_transactions:step_1'
