--- a/settings.gradle
+++ b/settings.gradle
@@ -103,6 +103,7 @@ include 'geometry_shape:step_8'
 include 'geometry_shape:step_9'
 include 'geometry_shape:step_10'
 include 'geometry_shape:step_11'
+include 'geometry_shape:step_12'
 
 
 include 'traders_and_transactions:step_1'
