--- a/settings.gradle
+++ b/settings.gradle
@@ -104,6 +104,7 @@ include 'geometry_shape:step_9'
 include 'geometry_shape:step_10'
 include 'geometry_shape:step_11'
 include 'geometry_shape:step_12'
+include 'geometry_shape:step_13'
 
 
 include 'traders_and_transactions:step_1'
