--- a/settings.gradle
+++ b/settings.gradle
@@ -107,6 +107,7 @@ include 'geometry_shape:step_12'
 include 'geometry_shape:step_13'
 include 'geometry_shape:step_14'
 include 'geometry_shape:step_15'
+include 'geometry_shape:step_16'
 
 
 include 'traders_and_transactions:step_1'
