--- a/settings.gradle
+++ b/settings.gradle
@@ -110,6 +110,9 @@ include 'geometry_shape:step_15'
 include 'geometry_shape:step_16'
 
 
+include 'math_operation:step_1'
+
+
 include 'traders_and_transactions:step_1'
 include 'traders_and_transactions:step_2'
 include 'traders_and_transactions:step_3'
