--- a/settings.gradle
+++ b/settings.gradle
@@ -111,6 +111,7 @@ include 'geometry_shape:step_16'
 
 
 include 'math_operation:step_1'
+include 'math_operation:step_2'
 
 
 include 'traders_and_transactions:step_1'
