--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,6 @@
+include 'part_1_programming_basics:lesson_1'
+
+
 include 'apple_warehouse:step_1'
 include 'apple_warehouse:step_2'
 include 'apple_warehouse:step_3'
