--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ include 'part_1_programming_basics:lesson_2_variables'
 include 'part_1_programming_basics:lesson_3_oop_first_look'
 include 'part_1_programming_basics:lesson_4_if_statement'
 include 'part_1_programming_basics:lesson_5_methods'
+include 'part_1_programming_basics:lesson_6_unit_testing'
 
 
 include 'apple_warehouse:step_1'
