--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include 'part_1_programming_basics:lesson_3_oop_first_look'
 include 'part_1_programming_basics:lesson_4_if_statement'
 include 'part_1_programming_basics:lesson_5_methods'
 include 'part_1_programming_basics:lesson_6_unit_testing'
+include 'part_1_programming_basics:lesson_7_array_for'
 
 
 include 'apple_warehouse:step_1'
