--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'part_1_programming_basics:lesson_5_methods'
 include 'part_1_programming_basics:lesson_6_unit_testing'
 include 'part_1_programming_basics:lesson_7_array_for'
 include 'part_1_programming_basics:lesson_8_kata_game_of_life'
+include 'part_1_programming_basics:lesson_9_lists_foreach'
 
 
 include 'apple_warehouse:step_1'
