--- a/settings.gradle
+++ b/settings.gradle
@@ -6,7 +6,8 @@ include 'part_1_programming_basics:lesson_5_methods'
 include 'part_1_programming_basics:lesson_6_unit_testing'
 include 'part_1_programming_basics:lesson_7_array_for'
 include 'part_1_programming_basics:lesson_8_kata_game_of_life'
-include 'part_1_programming_basics:lesson_9_lists_foreach'
+include 'part_1_programming_basics:lesson_9_project_school_dairy_part_1'
+include 'part_1_programming_basics:lesson_10_project_school_dairy_part_2'
 
 
 include 'apple_warehouse:step_1'
