--- a/settings.gradle
+++ b/settings.gradle
@@ -104,6 +104,8 @@ include 'part_1_programming_basics:lesson_19_project_property_insurance_calculat
 include 'part_1_programming_basics:lesson_19_project_property_insurance_calculator:step_25'
 include 'part_1_programming_basics:lesson_19_project_property_insurance_calculator:step_26'
 
+include 'part_1_programming_basics:lesson_20_multithreading'
+
 
 include 'apple_warehouse:step_1'
 include 'apple_warehouse:step_2'
