--- a/settings.gradle
+++ b/settings.gradle
@@ -105,6 +105,7 @@ include 'part_1_programming_basics:lesson_19_project_property_insurance_calculat
 include 'part_1_programming_basics:lesson_19_project_property_insurance_calculator:step_26'
 
 include 'part_1_programming_basics:lesson_20_multithreading'
+include 'part_1_programming_basics:lesson_21_refactoring'
 
 
 include 'apple_warehouse:step_1'
