--- a/settings.gradle
+++ b/settings.gradle
@@ -109,6 +109,8 @@ include 'java_software_engineer:lesson_21_refactoring'
 include 'java_software_engineer:lesson_22_bowling_game_kata'
 include 'java_software_engineer:lesson_23_vitual_file_system_kata'
 
+include 'java_software_engineer:lesson_24_single_responcibility_principle:step_1_simple_console_application'
+
 
 include 'apple_warehouse:step_1'
 include 'apple_warehouse:step_2'
