--- a/settings.gradle
+++ b/settings.gradle
@@ -110,6 +110,7 @@ include 'java_software_engineer:lesson_22_bowling_game_kata'
 include 'java_software_engineer:lesson_23_vitual_file_system_kata'
 
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_1_simple_console_application'
+include 'java_software_engineer:lesson_24_single_responcibility_principle:step_2_srp_level_method'
 
 
 include 'apple_warehouse:step_1'
