--- a/settings.gradle
+++ b/settings.gradle
@@ -111,6 +111,7 @@ include 'java_software_engineer:lesson_23_vitual_file_system_kata'
 
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_1_simple_console_application'
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_2_srp_level_method'
+include 'java_software_engineer:lesson_24_single_responcibility_principle:step_3_srp_level_class'
 
 
 include 'apple_warehouse:step_1'
