--- a/settings.gradle
+++ b/settings.gradle
@@ -112,6 +112,8 @@ include 'java_software_engineer:lesson_23_vitual_file_system_kata'
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_1_simple_console_application'
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_2_srp_level_method'
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_3_srp_level_class'
+include 'java_software_engineer:lesson_24_single_responcibility_principle:step_4_srp_level_package'
+include 'java_software_engineer:lesson_24_single_responcibility_principle:step_5_srp_level_application_layer'
 
 
 include 'apple_warehouse:step_1'
