--- a/settings.gradle
+++ b/settings.gradle
@@ -126,6 +126,8 @@ include 'java_software_engineer:lesson_24_single_responcibility_principle:step_1
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_15_dependency_injection'
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_16_spring'
 
+include 'java_software_engineer:lesson_25_currency_conversion_service'
+
 
 include 'apple_warehouse:step_1'
 include 'apple_warehouse:step_2'
