--- a/settings.gradle
+++ b/settings.gradle
@@ -127,6 +127,7 @@ include 'java_software_engineer:lesson_24_single_responcibility_principle:step_1
 include 'java_software_engineer:lesson_24_single_responcibility_principle:step_16_spring'
 
 include 'java_software_engineer:lesson_25_currency_conversion_service'
+include 'java_software_engineer:lesson_26_url_shortening_service'
 
 
 include 'apple_warehouse:step_1'
